Add shoot GUI